--- a/legacy/components/modal/styles.css
+++ b/legacy/components/modal/styles.css
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   z-index: 1000;
-  background: rgb(0 0 0 / 15%);
+  background: var(--color-background-default-overlay);
 }
 
 .rshb-legacy-modal {
@@ -31,7 +31,7 @@
 .rshb-legacy-modal[data-placement='top-center'] {
   position: fixed;
   z-index: 1000;
-  inset-block-start: 32px;
+  inset-block-start: var(--space-margins-inside-2xl);
   inset-inline-start: 50%;
   transform: translateX(-50%);
 }
