--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   z-index: 1000;
-  background: rgb(0 0 0 / 15%);
+  background: var(--color-background-default-overlay);
 }
 
 .rshb-modal {
