--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -503,7 +503,7 @@
   --motion-theme-curve: linear;
   --motion-theme-duration: 150ms;
   --motion-spin-curve: linear;
-  --motion-spin-duration: 200ms;
+  --motion-spin-duration: 800ms;
   --motion-loaderbrand-logo-curve: ease-out;
   --motion-loaderbrand-logo-duration: 200ms;
   --motion-loaderbrand-text-delay: 5000ms;
@@ -528,7 +528,7 @@
   --color-background-default-generic-focus: #00000040;
   --color-background-default-simple-hover: #0000000d;
   --color-background-default-simple-focus: #00000026;
-  --color-background-default-overlay: #00000040;
+  --color-background-default-overlay: #00000026;
   --color-background-default-disabled: #00000012;
   --color-background-brand-default: #67a757;
   --color-background-brand-hover: #4d853f;
@@ -656,7 +656,7 @@
   --color-background-default-generic-focus: #ffffff40;
   --color-background-default-simple-hover: #ffffff0d;
   --color-background-default-simple-focus: #ffffff26;
-  --color-background-default-overlay: #ffffff40;
+  --color-background-default-overlay: #ffffff26;
   --color-background-default-disabled: #ffffff12;
   --color-background-brand-default: #67a757;
   --color-background-brand-hover: #4d853f;
